// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots of selectors/profile-view matches the last stored run of getProfile 1`] = `
Object {
  "meta": Object {
    "abi": "",
    "extensions": Object {
      "baseURL": Array [],
      "id": Array [],
      "length": 0,
      "name": Array [],
    },
    "interval": 1,
    "misc": "",
    "oscpu": "",
    "platform": "",
    "preprocessedProfileVersion": 11,
    "processType": 0,
    "product": "Firefox",
    "stackwalk": 0,
    "startTime": 0,
    "toolkit": "",
    "version": 10,
  },
  "threads": Array [
    Object {
      "frameTable": Object {
        "address": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "category": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "func": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
        ],
        "implementation": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "length": 9,
        "line": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "optimizations": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
      },
      "funcTable": Object {
        "address": Array [
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
        ],
        "fileName": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "isJS": Array [
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
        ],
        "length": 9,
        "lineNumber": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "name": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
        ],
        "resource": Array [
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
          -1,
        ],
      },
      "libs": Array [],
      "markers": Object {
        "data": Array [
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "length": 6,
        "name": Array [
          0,
          1,
          2,
          3,
          4,
          5,
        ],
        "time": Array [
          0,
          1,
          2,
          3,
          4,
          5,
        ],
      },
      "name": "Thread with samples",
      "pid": 0,
      "processType": "default",
      "resourceTable": Object {
        "addonId": Array [],
        "host": Array [],
        "icon": Array [],
        "length": 0,
        "lib": Array [],
        "name": Array [],
        "type": Array [],
      },
      "samples": Object {
        "length": 9,
        "responsiveness": Array [
          0,
          0,
          0,
          0,
          100,
          0,
          0,
          0,
          0,
        ],
        "rss": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "stack": Array [
          4,
          4,
          4,
          6,
          6,
          6,
          8,
          8,
          8,
        ],
        "time": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
        ],
        "uss": Array [
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
          null,
        ],
      },
      "stackTable": Object {
        "frame": Array [
          0,
          1,
          2,
          3,
          4,
          5,
          6,
          7,
          8,
        ],
        "length": 9,
        "prefix": Array [
          null,
          0,
          1,
          2,
          3,
          2,
          5,
          1,
          7,
        ],
      },
      "stringTable": UniqueStringArray {
        "_array": Array [
          "A",
          "B",
          "C",
          "D",
          "E",
          "F",
          "G",
          "H",
          "I",
        ],
        "_stringToIndex": Map {
          "A" => 0,
          "B" => 1,
          "C" => 2,
          "D" => 3,
          "E" => 4,
          "F" => 5,
          "G" => 6,
          "H" => 7,
          "I" => 8,
        },
      },
      "tid": 0,
    },
    Object {
      "frameTable": Object {
        "address": Array [],
        "category": Array [],
        "func": Array [],
        "implementation": Array [],
        "length": 0,
        "line": Array [],
        "optimizations": Array [],
      },
      "funcTable": Object {
        "address": Array [],
        "fileName": Array [],
        "isJS": Array [],
        "length": 0,
        "lineNumber": Array [],
        "name": Array [],
        "resource": Array [],
      },
      "libs": Array [],
      "markers": Object {
        "data": Array [
          null,
          null,
          null,
          null,
          null,
          null,
        ],
        "length": 6,
        "name": Array [
          0,
          1,
          2,
          3,
          4,
          5,
        ],
        "time": Array [
          0,
          1,
          2,
          3,
          4,
          5,
        ],
      },
      "name": "Thread with markers",
      "pid": 0,
      "processType": "default",
      "resourceTable": Object {
        "addonId": Array [],
        "host": Array [],
        "icon": Array [],
        "length": 0,
        "lib": Array [],
        "name": Array [],
        "type": Array [],
      },
      "samples": Object {
        "length": 6,
        "responsiveness": Array [],
        "rss": Array [],
        "stack": Array [],
        "time": Array [
          0,
          0,
          1,
          1,
          2,
          2,
          3,
          3,
          4,
          4,
          5,
          5,
        ],
        "uss": Array [],
      },
      "stackTable": Object {
        "frame": Array [],
        "length": 0,
        "prefix": Array [],
      },
      "stringTable": UniqueStringArray {
        "_array": Array [
          "A",
          "B",
          "C",
          "D",
          "E",
          "F",
        ],
        "_stringToIndex": Map {
          "A" => 0,
          "B" => 1,
          "C" => 2,
          "D" => 3,
          "E" => 4,
          "F" => 5,
        },
      },
      "tid": 0,
    },
  ],
}
`;

exports[`snapshots of selectors/profile-view matches the last stored run of getThreads 1`] = `
Array [
  Object {
    "frameTable": Object {
      "address": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "category": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "func": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
      ],
      "implementation": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "length": 9,
      "line": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "optimizations": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
    },
    "funcTable": Object {
      "address": Array [
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
        0,
      ],
      "fileName": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "isJS": Array [
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
      ],
      "length": 9,
      "lineNumber": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "name": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
      ],
      "resource": Array [
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
        -1,
      ],
    },
    "libs": Array [],
    "markers": Object {
      "data": Array [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "length": 6,
      "name": Array [
        0,
        1,
        2,
        3,
        4,
        5,
      ],
      "time": Array [
        0,
        1,
        2,
        3,
        4,
        5,
      ],
    },
    "name": "Thread with samples",
    "pid": 0,
    "processType": "default",
    "resourceTable": Object {
      "addonId": Array [],
      "host": Array [],
      "icon": Array [],
      "length": 0,
      "lib": Array [],
      "name": Array [],
      "type": Array [],
    },
    "samples": Object {
      "length": 9,
      "responsiveness": Array [
        0,
        0,
        0,
        0,
        100,
        0,
        0,
        0,
        0,
      ],
      "rss": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "stack": Array [
        4,
        4,
        4,
        6,
        6,
        6,
        8,
        8,
        8,
      ],
      "time": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
      ],
      "uss": Array [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
      ],
    },
    "stackTable": Object {
      "frame": Array [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
      ],
      "length": 9,
      "prefix": Array [
        null,
        0,
        1,
        2,
        3,
        2,
        5,
        1,
        7,
      ],
    },
    "stringTable": UniqueStringArray {
      "_array": Array [
        "A",
        "B",
        "C",
        "D",
        "E",
        "F",
        "G",
        "H",
        "I",
      ],
      "_stringToIndex": Map {
        "A" => 0,
        "B" => 1,
        "C" => 2,
        "D" => 3,
        "E" => 4,
        "F" => 5,
        "G" => 6,
        "H" => 7,
        "I" => 8,
      },
    },
    "tid": 0,
  },
  Object {
    "frameTable": Object {
      "address": Array [],
      "category": Array [],
      "func": Array [],
      "implementation": Array [],
      "length": 0,
      "line": Array [],
      "optimizations": Array [],
    },
    "funcTable": Object {
      "address": Array [],
      "fileName": Array [],
      "isJS": Array [],
      "length": 0,
      "lineNumber": Array [],
      "name": Array [],
      "resource": Array [],
    },
    "libs": Array [],
    "markers": Object {
      "data": Array [
        null,
        null,
        null,
        null,
        null,
        null,
      ],
      "length": 6,
      "name": Array [
        0,
        1,
        2,
        3,
        4,
        5,
      ],
      "time": Array [
        0,
        1,
        2,
        3,
        4,
        5,
      ],
    },
    "name": "Thread with markers",
    "pid": 0,
    "processType": "default",
    "resourceTable": Object {
      "addonId": Array [],
      "host": Array [],
      "icon": Array [],
      "length": 0,
      "lib": Array [],
      "name": Array [],
      "type": Array [],
    },
    "samples": Object {
      "length": 6,
      "responsiveness": Array [],
      "rss": Array [],
      "stack": Array [],
      "time": Array [
        0,
        0,
        1,
        1,
        2,
        2,
        3,
        3,
        4,
        4,
        5,
        5,
      ],
      "uss": Array [],
    },
    "stackTable": Object {
      "frame": Array [],
      "length": 0,
      "prefix": Array [],
    },
    "stringTable": UniqueStringArray {
      "_array": Array [
        "A",
        "B",
        "C",
        "D",
        "E",
        "F",
      ],
      "_stringToIndex": Map {
        "A" => 0,
        "B" => 1,
        "C" => 2,
        "D" => 3,
        "E" => 4,
        "F" => 5,
      },
    },
    "tid": 0,
  },
]
`;

exports[`snapshots of selectors/profile-view matches the last stored run of selectedThreadSelector.getCallNodeInfo 1`] = `
Object {
  "callNodeTable": Object {
    "depth": Array [
      0,
      1,
      2,
      3,
      2,
      3,
      2,
      3,
    ],
    "func": Int32Array [
      0,
      1,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "length": 8,
    "prefix": Int32Array [
      -1,
      0,
      1,
      2,
      1,
      4,
      1,
      6,
    ],
  },
  "stackIndexToCallNodeIndex": Uint32Array [
    0,
    1,
    2,
    3,
    4,
    5,
    6,
    7,
  ],
}
`;

exports[`snapshots of selectors/profile-view matches the last stored run of selectedThreadSelector.getCallTree 1`] = `
CallTree {
  "_callNodeChildCount": Uint32Array [
    1,
    2,
    0,
    0,
    1,
    0,
    1,
    0,
  ],
  "_callNodeTable": Object {
    "depth": Array [
      0,
      1,
      2,
      3,
      2,
      3,
      2,
      3,
    ],
    "func": Int32Array [
      0,
      1,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "length": 8,
    "prefix": Int32Array [
      -1,
      0,
      1,
      2,
      1,
      4,
      1,
      6,
    ],
  },
  "_callNodeTimes": Object {
    "selfTime": Float32Array [
      0,
      0,
      0,
      0,
      0,
      3,
      0,
      1,
    ],
    "totalTime": Float32Array [
      4,
      4,
      0,
      0,
      3,
      3,
      1,
      1,
    ],
  },
  "_children": Map {},
  "_displayDataByIndex": Map {},
  "_funcTable": Object {
    "address": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "fileName": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "isJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "length": 9,
    "lineNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "resource": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
  },
  "_isChildrenCachePreloaded": false,
  "_isIntegerInterval": true,
  "_jsOnly": false,
  "_resourceTable": Object {
    "addonId": Array [],
    "host": Array [],
    "icon": Array [],
    "length": 0,
    "lib": Array [],
    "name": Array [],
    "type": Array [],
  },
  "_rootCount": 1,
  "_rootTotalTime": 4,
  "_stringTable": UniqueStringArray {
    "_array": Array [
      "A",
      "B",
      "C",
      "D",
      "E",
      "F",
      "G",
      "H",
      "I",
    ],
    "_stringToIndex": Map {
      "A" => 0,
      "B" => 1,
      "C" => 2,
      "D" => 3,
      "E" => 4,
      "F" => 5,
      "G" => 6,
      "H" => 7,
      "I" => 8,
    },
  },
}
`;

exports[`snapshots of selectors/profile-view matches the last stored run of selectedThreadSelector.getFilteredThread 1`] = `
Object {
  "frameTable": Object {
    "address": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "category": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "func": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "implementation": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "length": 9,
    "line": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "optimizations": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
  "funcTable": Object {
    "address": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "fileName": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "isJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "length": 9,
    "lineNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "resource": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
  },
  "libs": Array [],
  "markers": Object {
    "data": Array [
      null,
      null,
      null,
    ],
    "length": 3,
    "name": Array [
      3,
      4,
      5,
    ],
    "time": Array [
      3,
      4,
      5,
    ],
  },
  "name": "Thread with samples",
  "pid": 0,
  "processType": "default",
  "resourceTable": Object {
    "addonId": Array [],
    "host": Array [],
    "icon": Array [],
    "length": 0,
    "lib": Array [],
    "name": Array [],
    "type": Array [],
  },
  "samples": Object {
    "length": 4,
    "responsiveness": Array [
      0,
      100,
      0,
      0,
    ],
    "rss": Array [
      null,
      null,
      null,
      null,
    ],
    "stack": Array [
      5,
      5,
      5,
      7,
    ],
    "time": Array [
      3,
      4,
      5,
      6,
    ],
    "uss": Array [
      null,
      null,
      null,
      null,
    ],
  },
  "stackTable": Object {
    "frame": Array [
      0,
      1,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "length": 8,
    "prefix": Array [
      null,
      0,
      1,
      2,
      1,
      4,
      1,
      6,
    ],
  },
  "stringTable": UniqueStringArray {
    "_array": Array [
      "A",
      "B",
      "C",
      "D",
      "E",
      "F",
      "G",
      "H",
      "I",
    ],
    "_stringToIndex": Map {
      "A" => 0,
      "B" => 1,
      "C" => 2,
      "D" => 3,
      "E" => 4,
      "F" => 5,
      "G" => 6,
      "H" => 7,
      "I" => 8,
    },
  },
  "tid": 0,
}
`;

exports[`snapshots of selectors/profile-view matches the last stored run of selectedThreadSelector.getFlameGraphTiming 1`] = `
Array [
  Object {
    "callNode": Array [
      0,
    ],
    "display": Array [
      Object {
        "selfTime": "—",
        "totalTime": "4",
      },
    ],
    "end": Array [
      1,
    ],
    "length": 1,
    "selfTimeRelative": Array [
      0,
    ],
    "start": Array [
      0,
    ],
  },
  Object {
    "callNode": Array [
      1,
    ],
    "display": Array [
      Object {
        "selfTime": "—",
        "totalTime": "4",
      },
    ],
    "end": Array [
      1,
    ],
    "length": 1,
    "selfTimeRelative": Array [
      0,
    ],
    "start": Array [
      0,
    ],
  },
  Object {
    "callNode": Array [
      4,
      6,
    ],
    "display": Array [
      Object {
        "selfTime": "—",
        "totalTime": "3",
      },
      Object {
        "selfTime": "—",
        "totalTime": "1",
      },
    ],
    "end": Array [
      0.75,
      1,
    ],
    "length": 2,
    "selfTimeRelative": Array [
      0,
      0,
    ],
    "start": Array [
      0,
      0.75,
    ],
  },
  Object {
    "callNode": Array [
      5,
      7,
    ],
    "display": Array [
      Object {
        "selfTime": "3",
        "totalTime": "3",
      },
      Object {
        "selfTime": "1",
        "totalTime": "1",
      },
    ],
    "end": Array [
      0.75,
      1,
    ],
    "length": 2,
    "selfTimeRelative": Array [
      0.75,
      0.25,
    ],
    "start": Array [
      0,
      0.75,
    ],
  },
]
`;

exports[`snapshots of selectors/profile-view matches the last stored run of selectedThreadSelector.getJankInstances 1`] = `
Array [
  Object {
    "data": null,
    "dur": 100,
    "name": "Jank",
    "start": -96,
    "title": "100.00ms event processing delay",
  },
]
`;

exports[`snapshots of selectors/profile-view matches the last stored run of selectedThreadSelector.getMarkerTiming 1`] = `
Array [
  Object {
    "end": Array [
      0,
    ],
    "index": Array [
      0,
    ],
    "label": Array [
      "",
    ],
    "length": 1,
    "name": "A",
    "start": Array [
      0,
    ],
  },
  Object {
    "end": Array [
      1,
    ],
    "index": Array [
      1,
    ],
    "label": Array [
      "",
    ],
    "length": 1,
    "name": "B",
    "start": Array [
      1,
    ],
  },
  Object {
    "end": Array [
      2,
    ],
    "index": Array [
      2,
    ],
    "label": Array [
      "",
    ],
    "length": 1,
    "name": "C",
    "start": Array [
      2,
    ],
  },
  Object {
    "end": Array [
      3,
    ],
    "index": Array [
      3,
    ],
    "label": Array [
      "",
    ],
    "length": 1,
    "name": "D",
    "start": Array [
      3,
    ],
  },
  Object {
    "end": Array [
      4,
    ],
    "index": Array [
      4,
    ],
    "label": Array [
      "",
    ],
    "length": 1,
    "name": "E",
    "start": Array [
      4,
    ],
  },
  Object {
    "end": Array [
      5,
    ],
    "index": Array [
      5,
    ],
    "label": Array [
      "",
    ],
    "length": 1,
    "name": "F",
    "start": Array [
      5,
    ],
  },
]
`;

exports[`snapshots of selectors/profile-view matches the last stored run of selectedThreadSelector.getProcessedMarkersThread 1`] = `
Object {
  "frameTable": Object {
    "address": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "category": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "func": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "implementation": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "length": 9,
    "line": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "optimizations": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
  "funcTable": Object {
    "address": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "fileName": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "isJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "length": 9,
    "lineNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "resource": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
  },
  "libs": Array [],
  "markers": Object {
    "data": Array [
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "length": 6,
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
    ],
    "time": Array [
      0,
      1,
      2,
      3,
      4,
      5,
    ],
  },
  "name": "Thread with samples",
  "pid": 0,
  "processType": "default",
  "resourceTable": Object {
    "addonId": Array [],
    "host": Array [],
    "icon": Array [],
    "length": 0,
    "lib": Array [],
    "name": Array [],
    "type": Array [],
  },
  "samples": Object {
    "length": 9,
    "responsiveness": Array [
      0,
      0,
      0,
      0,
      100,
      0,
      0,
      0,
      0,
    ],
    "rss": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "stack": Array [
      4,
      4,
      4,
      6,
      6,
      6,
      8,
      8,
      8,
    ],
    "time": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "uss": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
  "stackTable": Object {
    "frame": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "length": 9,
    "prefix": Array [
      null,
      0,
      1,
      2,
      3,
      2,
      5,
      1,
      7,
    ],
  },
  "stringTable": UniqueStringArray {
    "_array": Array [
      "A",
      "B",
      "C",
      "D",
      "E",
      "F",
      "G",
      "H",
      "I",
      "Bailout",
      "Invalidate",
    ],
    "_stringToIndex": Map {
      "A" => 0,
      "B" => 1,
      "C" => 2,
      "D" => 3,
      "E" => 4,
      "F" => 5,
      "G" => 6,
      "H" => 7,
      "I" => 8,
      "Bailout" => 9,
      "Invalidate" => 10,
    },
  },
  "tid": 0,
}
`;

exports[`snapshots of selectors/profile-view matches the last stored run of selectedThreadSelector.getRangeAndTransformFilteredThread 1`] = `
Object {
  "frameTable": Object {
    "address": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "category": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "func": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "implementation": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "length": 9,
    "line": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "optimizations": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
  "funcTable": Object {
    "address": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "fileName": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "isJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "length": 9,
    "lineNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "resource": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
  },
  "libs": Array [],
  "markers": Object {
    "data": Array [
      null,
      null,
      null,
    ],
    "length": 3,
    "name": Array [
      3,
      4,
      5,
    ],
    "time": Array [
      3,
      4,
      5,
    ],
  },
  "name": "Thread with samples",
  "pid": 0,
  "processType": "default",
  "resourceTable": Object {
    "addonId": Array [],
    "host": Array [],
    "icon": Array [],
    "length": 0,
    "lib": Array [],
    "name": Array [],
    "type": Array [],
  },
  "samples": Object {
    "length": 4,
    "responsiveness": Array [
      0,
      100,
      0,
      0,
    ],
    "rss": Array [
      null,
      null,
      null,
      null,
    ],
    "stack": Array [
      5,
      5,
      5,
      7,
    ],
    "time": Array [
      3,
      4,
      5,
      6,
    ],
    "uss": Array [
      null,
      null,
      null,
      null,
    ],
  },
  "stackTable": Object {
    "frame": Array [
      0,
      1,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "length": 8,
    "prefix": Array [
      null,
      0,
      1,
      2,
      1,
      4,
      1,
      6,
    ],
  },
  "stringTable": UniqueStringArray {
    "_array": Array [
      "A",
      "B",
      "C",
      "D",
      "E",
      "F",
      "G",
      "H",
      "I",
    ],
    "_stringToIndex": Map {
      "A" => 0,
      "B" => 1,
      "C" => 2,
      "D" => 3,
      "E" => 4,
      "F" => 5,
      "G" => 6,
      "H" => 7,
      "I" => 8,
    },
  },
  "tid": 0,
}
`;

exports[`snapshots of selectors/profile-view matches the last stored run of selectedThreadSelector.getRangeFilteredThread 1`] = `
Object {
  "frameTable": Object {
    "address": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "category": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "func": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "implementation": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "length": 9,
    "line": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "optimizations": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
  "funcTable": Object {
    "address": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "fileName": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "isJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "length": 9,
    "lineNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "resource": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
  },
  "libs": Array [],
  "markers": Object {
    "data": Array [
      null,
      null,
      null,
    ],
    "length": 3,
    "name": Array [
      3,
      4,
      5,
    ],
    "time": Array [
      3,
      4,
      5,
    ],
  },
  "name": "Thread with samples",
  "pid": 0,
  "processType": "default",
  "resourceTable": Object {
    "addonId": Array [],
    "host": Array [],
    "icon": Array [],
    "length": 0,
    "lib": Array [],
    "name": Array [],
    "type": Array [],
  },
  "samples": Object {
    "length": 4,
    "responsiveness": Array [
      0,
      100,
      0,
      0,
    ],
    "rss": Array [
      null,
      null,
      null,
      null,
    ],
    "stack": Array [
      6,
      6,
      6,
      8,
    ],
    "time": Array [
      3,
      4,
      5,
      6,
    ],
    "uss": Array [
      null,
      null,
      null,
      null,
    ],
  },
  "stackTable": Object {
    "frame": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "length": 9,
    "prefix": Array [
      null,
      0,
      1,
      2,
      3,
      2,
      5,
      1,
      7,
    ],
  },
  "stringTable": UniqueStringArray {
    "_array": Array [
      "A",
      "B",
      "C",
      "D",
      "E",
      "F",
      "G",
      "H",
      "I",
    ],
    "_stringToIndex": Map {
      "A" => 0,
      "B" => 1,
      "C" => 2,
      "D" => 3,
      "E" => 4,
      "F" => 5,
      "G" => 6,
      "H" => 7,
      "I" => 8,
    },
  },
  "tid": 0,
}
`;

exports[`snapshots of selectors/profile-view matches the last stored run of selectedThreadSelector.getRangeSelectionFilteredThread 1`] = `
Object {
  "frameTable": Object {
    "address": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "category": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "func": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "implementation": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "length": 9,
    "line": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "optimizations": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
  },
  "funcTable": Object {
    "address": Array [
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
      0,
    ],
    "fileName": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "isJS": Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "length": 9,
    "lineNumber": Array [
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
      null,
    ],
    "name": Array [
      0,
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "resource": Array [
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
      -1,
    ],
  },
  "libs": Array [],
  "markers": Object {
    "data": Array [
      null,
      null,
      null,
    ],
    "length": 3,
    "name": Array [
      3,
      4,
      5,
    ],
    "time": Array [
      3,
      4,
      5,
    ],
  },
  "name": "Thread with samples",
  "pid": 0,
  "processType": "default",
  "resourceTable": Object {
    "addonId": Array [],
    "host": Array [],
    "icon": Array [],
    "length": 0,
    "lib": Array [],
    "name": Array [],
    "type": Array [],
  },
  "samples": Object {
    "length": 4,
    "responsiveness": Array [
      0,
      100,
      0,
      0,
    ],
    "rss": Array [
      null,
      null,
      null,
      null,
    ],
    "stack": Array [
      5,
      5,
      5,
      7,
    ],
    "time": Array [
      3,
      4,
      5,
      6,
    ],
    "uss": Array [
      null,
      null,
      null,
      null,
    ],
  },
  "stackTable": Object {
    "frame": Array [
      0,
      1,
      3,
      4,
      5,
      6,
      7,
      8,
    ],
    "length": 8,
    "prefix": Array [
      null,
      0,
      1,
      2,
      1,
      4,
      1,
      6,
    ],
  },
  "stringTable": UniqueStringArray {
    "_array": Array [
      "A",
      "B",
      "C",
      "D",
      "E",
      "F",
      "G",
      "H",
      "I",
    ],
    "_stringToIndex": Map {
      "A" => 0,
      "B" => 1,
      "C" => 2,
      "D" => 3,
      "E" => 4,
      "F" => 5,
      "G" => 6,
      "H" => 7,
      "I" => 8,
    },
  },
  "tid": 0,
}
`;

exports[`snapshots of selectors/profile-view matches the last stored run of selectedThreadSelector.getRangeSelectionFilteredTracingMarkers 1`] = `
Array [
  Object {
    "data": null,
    "dur": 0,
    "name": "D",
    "start": 3,
    "title": null,
  },
  Object {
    "data": null,
    "dur": 0,
    "name": "E",
    "start": 4,
    "title": null,
  },
  Object {
    "data": null,
    "dur": 0,
    "name": "F",
    "start": 5,
    "title": null,
  },
]
`;

exports[`snapshots of selectors/profile-view matches the last stored run of selectedThreadSelector.getRangeSelectionFilteredTracingMarkersForHeader 1`] = `
Array [
  Object {
    "data": null,
    "dur": 0,
    "name": "D",
    "start": 3,
    "title": null,
  },
  Object {
    "data": null,
    "dur": 0,
    "name": "E",
    "start": 4,
    "title": null,
  },
  Object {
    "data": null,
    "dur": 0,
    "name": "F",
    "start": 5,
    "title": null,
  },
]
`;

exports[`snapshots of selectors/profile-view matches the last stored run of selectedThreadSelector.getSearchFilteredMarkers 1`] = `
Object {
  "data": Array [
    null,
    null,
    null,
  ],
  "length": 3,
  "name": Array [
    3,
    4,
    5,
  ],
  "time": Array [
    3,
    4,
    5,
  ],
}
`;

exports[`snapshots of selectors/profile-view matches the last stored run of selectedThreadSelector.getThreadProcessDetails 1`] = `
"thread: \\"Thread with samples\\" (0)
process: \\"default\\" (0)"
`;

exports[`snapshots of selectors/profile-view matches the last stored run of selectedThreadSelector.getTracingMarkers 1`] = `
Array [
  Object {
    "data": null,
    "dur": 0,
    "name": "A",
    "start": 0,
    "title": null,
  },
  Object {
    "data": null,
    "dur": 0,
    "name": "B",
    "start": 1,
    "title": null,
  },
  Object {
    "data": null,
    "dur": 0,
    "name": "C",
    "start": 2,
    "title": null,
  },
  Object {
    "data": null,
    "dur": 0,
    "name": "D",
    "start": 3,
    "title": null,
  },
  Object {
    "data": null,
    "dur": 0,
    "name": "E",
    "start": 4,
    "title": null,
  },
  Object {
    "data": null,
    "dur": 0,
    "name": "F",
    "start": 5,
    "title": null,
  },
]
`;

exports[`snapshots of selectors/profile-view matches the last stored run of selectedThreadSelector.getViewOptions 1`] = `
Object {
  "expandedCallNodePaths": PathSet {
    "_table": Map {
      "0" => Array [
        0,
      ],
      "0-1" => Array [
        0,
        1,
      ],
    },
  },
  "selectedCallNodePath": Array [
    0,
    1,
  ],
  "selectedMarker": 1,
}
`;
